# k-diagram

./: .gitignore  .readthedocs.yml  CITATION.cff  CODE_OF_CONDUCT.md  MANIFEST.in  README.md  chatgpt_estimators_guide.txt  codecov.yml  conftest.py  environment.yml  joss_replies.md  joss_reviews.md  paper.bib  paper.md  pyproject.toml  pytest.ini  quickstart_data.csv  setup.py  untitled22.py
.github/workflows/: publish.yml  python-package-conda.yml
data/cas/: readme.md
data/cas/modeling_results_ok/: metrics_all_domains.csv  metrics_hydro.csv  metrics_hydro_all.json  metrics_hydro_h1.json  metrics_hydro_h3.json  metrics_hydro_h5.json  metrics_hydro_h7.json  predictions_hydro.csv  predictions_hydro_xtft.csv  predictions_subsidence.csv  predictions_wind.csv  readme.txt
data/cas/outputs/: fig5.eps  figA1_h_sensitivity.eps  figA2_lambda_crossing.eps  figA3_kernel_robustness.eps  figA5_directional_cas.eps  figure1_rearrangement.eps  figure2_fan_charts.eps  figure4_risk_index.eps  table3_rank_stability_full.csv  table3_rank_stability_summary.csv  table4_risk_index_summary.csv
data/cas/preprocessed/: hydro_clean.csv  manifest.json_hydro  manifest.json_subsidence  manifest.json_wind  supervised_long_hydro.csv  wind_clean.csv
data/cas/raw/: camels_timeseries.csv  egms_point.csv  gefcom_hourly.csv  readme.txt
docs/: requirements.txt
docs/source/: api.rst  citing.rst  cli_usage.rst  code_of_conduct.rst  conf.py  contributing.rst  development.rst  gallery.rst  glossary.rst  index.rst  installation.rst  license.rst  motivation.rst  quickstart.rst  references.bib  references.rst  release_notes.rst
docs/source/_autosummary/comparison/: kdiagram.plot.comparison.plot_horizon_metrics.rst  kdiagram.plot.comparison.plot_model_comparison.rst  kdiagram.plot.comparison.plot_polar_reliability.rst  kdiagram.plot.comparison.plot_reliability_diagram.rst
docs/source/_autosummary/context/: kdiagram.plot.context.plot_qq.rst  (+5 more)
docs/source/_static/: custom.js
docs/source/cli/: comparison.rst  context.rst  errors.rst  evaluation.rst  feature_based.rst  index.rst  introduction.rst  probabilistic.rst  relationship.rst  taylor_diagram.rst  uncertainty.rst
docs/source/gallery/: anomaly.rst  comparison.rst  context.rst  errors.rst  evaluation.rst  feature_based.rst  hist.rst  index.rst  plot.rst  plots.rst  probabilistic.rst  relationship.rst  spatial.rst  taylor_diagram.rst  uncertainty.rst  utils.rst
docs/source/release_notes/: index.rst  v1.0.0.rst  v1.0.3.rst  v1.1.0.rst  v1.2.0.rst  v1.2.2.rst  v1.2.3.rst  v1.3.0.rst  v1.3.2.rst  v1.3.5.rst  v1.4.0.rst  v1.4.1.rst  v1.4.2.rst  v1.4.3.rst
docs/source/user_guide/: anomaly.rst  case_history.rst  comparison.rst  context.rst  datasets.rst  errors.rst  evaluation.rst  feature_based.rst  forecast_utils.rst  hist.rst  index.rst  math_utils.rst  metric.rst  probabilistic.rst  quantile_utils.rst  relationship.rst  spatial.rst  taylor_diagram.rst  uncertainty.rst  utils.rst
examples/cas/: readme.md
examples/cas/notebooks/: CAS_end_to_end.ipynb
examples/cas/scripts/: cas_modeling.py  export_figures_multi_format.py  figA1_h_sensitivity.py  figA2_lambda_crossing.py  figA3_kernel_robustness.py  figA4_horizon_profile.py  figA5_directional_cas.py  figure1_rearrangement.py  figure2_fan_charts.py  figure3_rank_stability.py  figure4_risk_index.py  merge_xtft_hydro.py  prepare_cas_datasets.py  preprocessing_cas_data.py  refresh_after_xtft.py  results_R1.py  results_R2.py  results_R3.py  results_R4.py  results_R5.py  results_R6.py  results_R7.py  results_R8.py  results_R9.py  results_config.py  run_xtft_hydro.py
kdiagram/: __init__.py  _version.py  cli.py  config.py  decorators.py  metrics.py
kdiagram/api/: bunch.py  summary.py  typing.py  util.py
kdiagram/cli/: __init__.py  _utils.py  cli.py  plot_anomalies.py  plot_comparison.py  plot_cond_relationship.py  plot_confusion_matrices.py  plot_context_corr.py  plot_context_err.py  plot_coverages.py  plot_credibility.py  plot_drift.py  plot_errors.py  plot_eval_ext.py  plot_eval_performance.py  plot_eval_relationship.py  plot_feature_based.py  plot_fields.py  plot_intervals.py  plot_pr_roc.py  plot_probs.py  plot_reliability.py  plot_sharpness.py  plot_taylord.py  plot_temporal.py  plot_ts_analyses.py  plot_velocities.py  plot_vs.py
kdiagram/compat/: matplotlib.py  numpy.py  sklearn.py
kdiagram/core/: _io_utils.py  io.py  property.py
kdiagram/datasets/: __init__.py  _property.py  load.py  make.py
kdiagram/datasets/data/: min_zhongshan.csv
kdiagram/plot/: __init__.py  _properties.py  anomaly.py  comparison.py  context.py  errors.py  evaluation.py  feature_based.py  probabilistic.py  relationship.py  spatial.py  taylor_diagram.py  uncertainty.py
kdiagram/tests/: test_datasets.py  test_evaluation.py  test_feature_based.py  test_metric_utils.py  test_plot_model_comparison.py  test_relationship.py  test_uncertainty.py
kdiagram/utils/: __init__.py  _deps.py  deps.py  diagnose_q.py  forecast_utils.py  fs.py  generic_utils.py  handlers.py  hist.py  io.py  mathext.py  metric_utils.py  plot.py  q_utils.py  validator.py
tests/: test_advanced_plots.py  test_api_bunch.py  test_api_summary.py  test_api_util.py  test_cas_correctness.py  test_cli.py  test_cli_.py  test_cli_comparisons.py  test_cli_context.py  test_cli_context_plots.py  test_cli_errors.py  test_cli_eval_polar.py  test_cli_feature_based.py  test_cli_probabilistic.py  test_cli_regression_performance.py  test_cli_regression_performance_norm.py  test_cli_relationship.py  test_cli_taylord.py  test_cli_ts_analyses.py  test_cli_uncertainty.py  test_cli_utils.py  test_cli_utils_more.py  test_comparison_horizon_metrics_acov.py  test_comparison_polar_acov.py  test_compat_matplotlib.py  test_compat_matplotlib_colors.py  test_compat_numpy.py  test_compat_sklearn.py  test_config.py  test_core_io.py  test_core_io_read_data.py  test_core_io_utils.py  test_core_io_write_data.py  test_datasets.py  test_datasets_.py  test_datasets__property.py  test_datasets__property_plus.py  test_datasets_make.py  test_datasets_make_new.py  test_datasets_make_plus.py  (+71 more)
(+72 files in other folders)
