[build-system]
requires = ["setuptools>=69", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "k-diagram"
dynamic = ["version"]
description = "Rethinking Forecasting Uncertainty via Polar-Based Visualization"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [{ name = "Laurent Kouadio", email = "etanoyau@gmail.com" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
keywords = ["forecasting", "uncertainty visualization", "model evaluation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix"
]
dependencies = [
    "numpy>=1.22",
    "pandas",
    "scipy",
    "matplotlib",
    "seaborn",
    "scikit-learn"
]

[tool.setuptools_scm]
write_to = "kdiagram/_scm_version.py"

[project.urls]
"Home page" = "https://k-diagram.readthedocs.io"
"API Documentation" = "https://k-diagram.readthedocs.io/en/latest/api_references.html"
"Installation guide" = "https://k-diagram.readthedocs.io/en/latest/installation.html"
"User guide" = "https://k-diagram.readthedocs.io/en/latest/user_guide.html"
"Bug Tracker" = "https://github.com/earth-ai-tech/k-diagram/issues"
"Source" = "https://github.com/earth-ai-tech/k-diagram"

[project.scripts]
k-diagram = "kdiagram.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-xdist",
    "black>=24.0",
    "ruff>=0.4",
    "coverage[toml]>=7.0",
    "tqdm",
    # for docs
    "sphinx>=7.0",
    "furo",
    "sphinx-copybutton",
    "myst-parser",
    "sphinx-design",
    "sphinx-gallery",
    "sphinxcontrib-jsmath",
    "sphinx-mathjax-offline",
    "sphinx-issues",
    "sphinx-prompt",
    "sphinxcontrib-bibtex",
    "numpydoc>=1.6"
]

[tool.setuptools.packages.find]
include = ["kdiagram*"]

[tool.setuptools.package-data]
# Include all CSV files 
kdiagram = ["datasets/data/*.csv"]


[tool.pytest.ini_options]
addopts = "-ra --cov=kdiagram --cov-report=xml"
testpaths = ["tests"]
markers = [
    "network: marks tests as requiring network access",
]


[tool.coverage.run]
source = ["kdiagram"]
branch = true
parallel = true
omit = [
    "kdiagram/__init__.py",             # Only re-exports the public API
    "kdiagram/__main__.py", 
    "kdiagram/_scm_version.py",         # Auto-generated by setuptools-scm
    "kdiagram/datasets/_property.py",   # Internal dataset helpers
    
    # Difficult to unit test reliably 
    "kdiagram/cli/_utils.py ",          # Tested via integration, not unit coverage
    "kdiagram/core/_io_utils.py ",
    "kdiagram/core/io.py ",
    "kdiagram/compat/*",                # Handles external library version differences
    "kdiagram/utils/deps.py",           # Handles optional dependencies
    "kdiagram/utils/_deps.py",          # Handles optional dependencies
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "def __repr__",
]

[tool.black]
line-length = 78
target-version = ["py39", "py310", "py311", "py312", "py313"]

[tool.ruff]
line-length = 78
target-version = "py39"
exclude = ["docs", "kdiagram/_scm_version.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["F401", "E501"]

[tool.ruff.lint.isort]
known-first-party = ["kdiagram"]
